Make WebDeviceOrientationUpdateProviderProxy validate origin access before registering for change https://bugs.webkit.org/show_bug.cgi?id=289512
Reviewed by Per Arne Vollan.

When deviceOrientationPermissionAPIEnabled is true, WebPageProxy would keep track of origins that have access to device
orientation and motion data. WebDeviceOrientationUpdateProviderProxy, as the actual observer of these updates, should
validate requesting origin has access before registering itself to WebCoreMotionManager.

WebPageProxy::originHasDeviceOrientationAndMotionAccess is not implemented yet in this patch, as there is a bug that
WebDeviceOrientationAndMotionAccessController in UI process and DeviceOrientationAndMotionAccessController in web
process have different views of which origin has access.

* Source/WebCore/dom/DeviceMotionController.cpp:
(WebCore::DeviceMotionController::resumeUpdates):
* Source/WebCore/dom/DeviceMotionController.h:
* Source/WebCore/dom/DeviceOrientationController.cpp:
(WebCore::DeviceOrientationController::resumeUpdates):
* Source/WebCore/dom/DeviceOrientationController.h:
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::resumeDeviceMotionAndOrientationUpdates):
* Source/WebCore/page/DeviceClient.h:
* Source/WebCore/page/DeviceController.cpp:
(WebCore::DeviceController::addDeviceEventListener):
* Source/WebCore/page/SecurityOriginData.h:
* Source/WebCore/platform/ios/DeviceMotionClientIOS.h:
* Source/WebCore/platform/ios/DeviceMotionClientIOS.mm:
(WebCore::DeviceMotionClientIOS::startUpdating):
* Source/WebCore/platform/ios/DeviceOrientationClientIOS.h:
* Source/WebCore/platform/ios/DeviceOrientationClientIOS.mm:
(WebCore::DeviceOrientationClientIOS::startUpdating):
* Source/WebCore/platform/ios/DeviceOrientationUpdateProvider.h:
* Source/WebCore/platform/mock/DeviceOrientationClientMock.cpp:
(WebCore::DeviceOrientationClientMock::startUpdating):
* Source/WebCore/platform/mock/DeviceOrientationClientMock.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:


--- a/Source/WebKit/UIProcess/ios/WebDeviceOrientationUpdateProviderProxy.messages.in
+++ b/Source/WebKit/UIProcess/ios/WebDeviceOrientationUpdateProviderProxy.messages.in
@@ -27,9 +27,9 @@
     EnabledBy=DeviceOrientationEventEnabled
 ]
 messages -> WebDeviceOrientationUpdateProviderProxy {
-    StartUpdatingDeviceOrientation();
+    StartUpdatingDeviceOrientation(WebCore::SecurityOriginData origin);
     StopUpdatingDeviceOrientation();
-    StartUpdatingDeviceMotion();
+    StartUpdatingDeviceMotion(WebCore::SecurityOriginData origin);
     StopUpdatingDeviceMotion();
 }
 #endif
