Enable command and commandfor in preview https://bugs.webkit.org/show_bug.cgi?id=289644
Reviewed by Tim Nguyen.

This patch renames InvokerAttributesEnabled to CommandAttributesEnabled,
and sets the status to preview.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/dom/CommandEvent.idl:
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::isElementReflectionAttribute):
* Source/WebCore/dom/GlobalEventHandlers.idl:
* Source/WebCore/html/HTMLButtonElement.cpp:
(WebCore::HTMLButtonElement::attributeChanged):
(WebCore::HTMLButtonElement::commandForElement const):
(WebCore::HTMLButtonElement::computeType):
* Source/WebCore/html/HTMLButtonElement.idl:

Canonical link: https://commits.webkit.org/292069@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -2032,6 +2032,20 @@ ColorFilterEnabled:
     WebCore:
       default: false
 
+CommandAttributesEnabled:
+  type: bool
+  status: preview
+  category: html
+  humanReadableName: "HTML command & commandfor attributes"
+  humanReadableDescription: "Enable HTML command & commandfor attribute support"
+  defaultValue:
+    WebKitLegacy:
+      default: false
+    WebKit:
+      default: false
+    WebCore:
+      default: false
+
 # FIXME: WebKit has an alternate name for this called 'ShowDebugBorders'. We should standardize on one name.
 CompositingBordersVisible:
   type: bool
@@ -3991,20 +4005,6 @@ InvisibleAutoplayNotPermitted:
       default: false
     WebKit:
       "PLATFORM(IOS_FAMILY)": true
-      default: false
-    WebCore:
-      default: false
-
-InvokerAttributesEnabled:
-  type: bool
-  status: testable
-  category: html
-  humanReadableName: "HTML command & commandfor attributes"
-  humanReadableDescription: "Enable HTML command & commandfor attribute support"
-  defaultValue:
-    WebKitLegacy:
-      default: false
-    WebKit:
       default: false
     WebCore:
       default: false
