Use StreamBatched for ReleaseDecomposedGlyphs IPC stream send https://bugs.webkit.org/show_bug.cgi?id=289551 rdar://146775570
Reviewed by Kimmo Kinnunen.

The RenderObject destructor takes up a considerable number of samples on
traces. As a part of the RenderObject destruction, we remove entries
from the GlyphDisplayListCache. Deleting each RenderingResource causes
an IPC::StreamClientConnection::send() to occur to notify the GPU process
to “ReleaseDecomposedGlyphs”. On traces, we see that
"semaphore_signal_trap @ libsystem_kernel.dylib" is the bottleneck of this function.

The WebContent Process calls signal() on a semaphore in a shared buffer
between the two processes. The signal() call will wake up the GPU
process which is waiting on the semaphore. Use StreamBatched to
delay calling signal() until a max consecutive “StreamingBatched”
message count is met to then call signal().

This is a performance improvement.

* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.messages.in:

Canonical link: https://commits.webkit.org/292098@main

--- a/Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.messages.in
+++ b/Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.messages.in
@@ -39,7 +39,7 @@ messages -> RemoteRenderingBackend Stream {
     CacheFontCustomPlatformData(struct WebCore::FontCustomPlatformSerializedData fontCustomPlatformData) NotStreamEncodable
     ReleaseFontCustomPlatformData(WebCore::RenderingResourceIdentifier identifier)
     CacheDecomposedGlyphs(Ref<WebCore::DecomposedGlyphs> decomposedGlyphs)
-    ReleaseDecomposedGlyphs(WebCore::RenderingResourceIdentifier identifier)
+    ReleaseDecomposedGlyphs(WebCore::RenderingResourceIdentifier identifier) StreamBatched
     CacheGradient(Ref<WebCore::Gradient> gradient) NotStreamEncodable
     ReleaseGradient(WebCore::RenderingResourceIdentifier identifier)
     CacheFilter(Ref<WebCore::Filter> filter) NotStreamEncodable
