Use CoreIPCAVOutputContext instead of WKKeyedCoder for MediaPlaybackTargetContextSerialized where supported https://bugs.webkit.org/show_bug.cgi?id=289713 rdar://147038389
Reviewed by Brady Eidson.

No change in observable behaviour.

* Source/WebCore/PAL/pal/cocoa/AVFoundationSoftLink.h: Adding SPECIALIZE_OBJC_TYPE_TRAITS so that `dynamic_objc_cast<AVOutputContext>` is usable.
* Source/WebKit/Platform/cocoa/MediaPlaybackTargetContextSerialized.h:
* Source/WebKit/Platform/cocoa/MediaPlaybackTargetContextSerialized.mm:
(WebKit::MediaPlaybackTargetContextSerialized::MediaPlaybackTargetContextSerialized):
(WebKit::MediaPlaybackTargetContextSerialized::platformContext const):
* Source/WebKit/Platform/cocoa/MediaPlaybackTargetContextSerialized.serialization.in:
* Source/WebKit/Shared/Cocoa/WKKeyedCoder.h: Add comment to ensure it should no longer be used.

Canonical link: https://commits.webkit.org/292187@main

--- a/Source/WebKit/Platform/cocoa/MediaPlaybackTargetContextSerialized.serialization.in
+++ b/Source/WebKit/Platform/cocoa/MediaPlaybackTargetContextSerialized.serialization.in
@@ -43,8 +43,12 @@ header: "MediaPlaybackTargetContextSerialized.h"
     bool supportsRemoteVideoPlayback();
     WebCore::MediaPlaybackTargetContextType targetType();
     WebCore::MediaPlaybackTargetContextMockState mockState();
+#if HAVE(WK_SECURE_CODING_AVOUTPUTCONTEXT)
+    WebKit::CoreIPCAVOutputContext context();
+#else
     String contextID();
     String contextType();
+#endif
 };
 
 #endif // ENABLE(WIRELESS_PLAYBACK_TARGET)
