Add WebPageProxy::originHasDeviceOrientationAndMotionAccess rdar://146690117 https://bugs.webkit.org/show_bug.cgi?id=289490
Reviewed by Per Arne Vollan.

When deviceOrientationPermissionAPIEnabled is true, UI process keeps track of origins that have access to device
orientation and motion data in `WebDeviceOrientationAndMotionAccessController::m_deviceOrientationPermissionDecisions`;
web process also keeps track of that in `DeviceOrientationAndMotionAccessController::m_accessStatePerOrigin`. Normally,
they should have the same view of data so that they will make consistent decision. However, it turns out they sometimes
don't due to two issues:
1. UI process doesn't update LegacySchemeRegistry when registering scheme (`WebPageProxy::setURLSchemeHandlerForScheme`)
while web process does (`WebPage::RegisterURLSchemeHandler`), so an origin might be viewed as opaque in UI process but
not in web process, and it will have different representation in `m_deviceOrientationPermissionDecisions` and
`m_accessStatePerOrigin`.
2. UI process doesn't update `m_deviceOrientationPermissionDecisions` with permission specified in WebsitePolicies,
while web process does.

These issues are found when I added validaiton for origin in `WebPageProxy::simulateDeviceOrientationChange`: the API
tests that uses `_simulateDeviceOrientationChange` start to time out due to inconsistent view of data. This patch fixes
both issues.

* Source/WebKit/Shared/WebsitePoliciesData.cpp:
(WebKit::WebsitePoliciesData::applyToDocumentLoader):
* Source/WebKit/Shared/WebsitePoliciesData.h:
* Source/WebKit/Shared/WebsitePoliciesData.serialization.in:
* Source/WebKit/UIProcess/API/APIWebsitePolicies.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebpagePreferences.mm:
(-[WKWebpagePreferences _deviceOrientationAndMotionAccessPolicy]):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::receivedNavigationActionPolicyDecision):
(WebKit::WebPageProxy::originHasDeviceOrientationAndMotionAccess):
(WebKit::WebPag

--- a/Source/WebKit/Shared/WebsitePoliciesData.serialization.in
+++ b/Source/WebKit/Shared/WebsitePoliciesData.serialization.in
@@ -82,7 +82,7 @@ struct WebKit::WebsitePoliciesData {
     WebCore::ColorSchemePreference colorSchemePreference;
     WebKit::WebContentMode preferredContentMode;
 #if ENABLE(DEVICE_ORIENTATION)
-    WebCore::DeviceOrientationOrMotionPermissionState deviceOrientationAndMotionAccessState;
+    std::optional<WebCore::DeviceOrientationOrMotionPermissionState> deviceOrientationAndMotionAccessState;
 #endif
     WebCore::HTTPSByDefaultMode httpsByDefaultMode;
     bool idempotentModeAutosizingOnlyHonorsPercentages;
