--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -3841,7 +3841,7 @@ header: <WebCore/ControlPart.h>
 
 header: <WebCore/ButtonPart.h>
 [RefCounted, AdditionalEncoder=StreamConnectionEncoder, DisableMissingMemberCheck] class WebCore::ButtonPart {
-    WebCore::StyleAppearance type();
+    [Validator='type == WebCore::StyleAppearance::Button || type == WebCore::StyleAppearance::DefaultButton || type == WebCore::StyleAppearance::PushButton || type == WebCore::StyleAppearance::SquareButton'] WebCore::StyleAppearance type();
 }
 
 header: <WebCore/InnerSpinButtonPart.h>
@@ -3862,12 +3862,12 @@ header: <WebCore/SearchFieldPart.h>
 
 header: <WebCore/SliderThumbPart.h>
 [RefCounted, AdditionalEncoder=StreamConnectionEncoder, DisableMissingMemberCheck] class WebCore::SliderThumbPart {
-    WebCore::StyleAppearance type();
+    [Validator='type == WebCore::StyleAppearance::SliderThumbHorizontal || type == WebCore::StyleAppearance::SliderThumbVertical'] WebCore::StyleAppearance type();
 }
 
 header: <WebCore/SearchFieldResultsPart.h>
 [RefCounted, AdditionalEncoder=StreamConnectionEncoder, DisableMissingMemberCheck] class WebCore::SearchFieldResultsPart {
-    WebCore::StyleAppearance type();
+    [Validator='type == WebCore::StyleAppearance::SearchFieldResultsButton || type == WebCore::StyleAppearance::SearchFieldResultsDecoration'] WebCore::StyleAppearance type();
 }
 
 header: <WebCore/SearchFieldCancelButtonPart.h>
@@ -3876,7 +3876,7 @@ header: <WebCore/SearchFieldCancelButtonPart.h>
 
 header: <WebCore/TextAreaPart.h>
 [RefCounted, AdditionalEncoder=StreamConnectionEncoder, DisableMissingMemberCheck] class WebCore::TextAreaPart {
-    WebCore::StyleAppearance type();
+    [Validator='type == WebCore::StyleAppearance::Listbox || type == WebCore::StyleAppearance::TextArea'] WebCore::StyleAppearance type();
 }
 
 header: <WebCore/TextFieldPart.h>
@@ -3885,7 +3885,7 @@ header: <WebCore/TextFieldPart.h>
 
 header: <WebCore/ToggleButtonPart.h>
 [RefCounted, AdditionalEncoder=StreamConnectionEncoder, DisableMissingMemberCheck] class WebCore::ToggleButtonPart {
-    WebCore::StyleAppearance type();
+    [Validator='type == WebCore::StyleAppearance::Checkbox || type == WebCore::StyleAppearance::Radio'] WebCore::StyleAppearance type();
 }
 
 #if ENABLE(SERVICE_CONTROLS)
@@ -3952,7 +3952,7 @@ enum class WebCore::ApplePayButtonStyle : uint8_t {
 };
 
 [RefCounted, AdditionalEncoder=StreamConnectionEncoder] class WebCore::SliderTrackPart {
-    WebCore::StyleAppearance type();
+    [Validator='type == WebCore::StyleAppearance::SliderHorizontal || type == WebCore::StyleAppearance::SliderVertical'] WebCore::StyleAppearance type();
     WebCore::IntSize thumbSize();
     WebCore::IntRect trackBounds();
     Vector<double> tickRatios();
