--- a/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
+++ b/Source/WebKit/WebProcess/com.apple.WebProcess.sb.in
@@ -1805,11 +1805,12 @@
     (with-filter (lockdown-mode)
         (deny syscall-mig (with telemetry) (kernel-mig-routines-blocked-in-lockdown-mode)))
     (allow syscall-mig (kernel-mig-routines-in-use))
-#if HAVE(MACH_RANGE_CREATE)
     (with-filter (require-not (webcontent-process-launched))
+#if HAVE(MACH_RANGE_CREATE)
         (when (defined? 'mach_vm_range_create)
-            (allow syscall-mig (kernel-mig-routine mach_vm_range_create))))
+            (allow syscall-mig (kernel-mig-routine mach_vm_range_create)))
 #endif
+        (allow syscall-mig (kernel-mig-routine task_restartable_ranges_register)))
     (with-filter (require-not (state-flag "BlockIOKitInWebContentSandbox"))
         (allow syscall-mig (kernel-mig-routines-downlevels))
         (allow syscall-mig (kernel-mig-routines-iokit))
