Move webpushd state to container https://bugs.webkit.org/show_bug.cgi?id=289557 rdar://110714823
Reviewed by Brady Eidson.

The data in ~/Library/WebKit/WebPush contains state that only webpushd needs to access. To enforce
this, move that state in to a container. We do this at process launch time. If we detect state in
the old location and no state in the new location, then we initiate a one-time migration.

* Source/WebKit/Scripts/process-entitlements.sh:
* Source/WebKit/webpushd/WebPushDaemonMain.mm:
(WebKit::getWebPushDirectoryPathWithMigrationIfNecessary):
(WebKit::WebPushDaemonMain):
* Source/WebKit/webpushd/mac/com.apple.WebKit.webpushd.mac.sb.in:

Canonical link: https://commits.webkit.org/292327@main

--- a/Source/WebKit/webpushd/mac/com.apple.WebKit.webpushd.mac.sb.in
+++ b/Source/WebKit/webpushd/mac/com.apple.WebKit.webpushd.mac.sb.in
@@ -298,3 +298,9 @@
 ;;; Allow interfacing with UNUserNotificationCenter
 (allow mach-lookup
     (global-name "com.apple.usernotifications.listener"))
+
+;;; Allow looking up container paths
+(allow file-read* file-write*
+    (extension "com.apple.sandbox.application-group"))
+
+(allow mach-lookup (global-name "com.apple.containermanagerd"))
