Drop a signpost for programmatic scrolls https://bugs.webkit.org/show_bug.cgi?id=289905 rdar://147232655
Reviewed by Ben Nham.

Call tracePoint() from `AsyncScrollingCoordinator::requestScrollToPosition()` so that perf traces
can show when web content is triggering programmatic scrolling.

* Source/WTF/wtf/SystemTracing.h:
* Source/WTF/wtf/glib/SysprofAnnotator.h:
* Source/WebCore/page/scrolling/AsyncScrollingCoordinator.cpp:
(WebCore::AsyncScrollingCoordinator::requestScrollToPosition):
* Source/WebKit/Resources/Signposts/SystemTracePoints.plist:
* Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/292331@main

--- a/Source/WebKit/Resources/Signposts/SystemTracePoints.plist
+++ b/Source/WebKit/Resources/Signposts/SystemTracePoints.plist
@@ -526,6 +526,30 @@
              </dict>
              <dict>
                  <key>Name</key>
+                 <string>Programmatic scroll</string>
+                 <key>Type</key>
+                 <string>Impulse</string>
+                 <key>Component</key>
+                 <string>47</string>
+                 <key>Code</key>
+                 <string>5055</string>
+                 <key>ArgNames</key>
+                 <dict>
+                     <key>Arg1</key>
+                     <string>y offset</string>
+                     <key>Arg2</key>
+                     <string>Is main frame</string>
+                 </dict>
+                 <key>ArgValueTypes</key>
+                 <dict>
+                     <key>Arg1</key>
+                     <string>Int32</string>
+                     <key>Arg2</key>
+                     <string>Int32</string>
+                 </dict> 
+             </dict>
+             <dict>
+                 <key>Name</key>
                  <string>Paint WebHTMLView</string>
                  <key>Type</key>
                  <string>Interval</string>
