[Cocoa] Use mediaKeysHashSalt() in more places rdar://146422515 https://bugs.webkit.org/show_bug.cgi?id=289987
Reviewed by Andy Estes.

Use mediaKeysHashSalt() in all the places where -[AVContentKeyRequest
makeStreamingContentKeyRequestDataForApp:contentIdentifier:options:completionHandler:]
is called, by adding a static method optionsForKeyRequestWithHashSalt() which can
be used in both CDMInstanceFairPlayStreamingAVFObjC as well as CDMSessionAVContentKeySession.

To make mediaKeyHashSalt() avalable in the LegacyCDMSession codepath, make legacy requests take the same
trip through MediaKeySystemRequest.

* Source/WebCore/Modules/encryptedmedia/MediaKeySystemRequest.cpp:
(WebCore::MediaKeySystemRequest::create):
(WebCore::MediaKeySystemRequest::MediaKeySystemRequest):
(WebCore::MediaKeySystemRequest::deny):
* Source/WebCore/Modules/encryptedmedia/MediaKeySystemRequest.h:
(WebCore::MediaKeySystemRequest::setAllowCallback):
* Source/WebCore/Modules/encryptedmedia/NavigatorEME.cpp:
(WebCore::NavigatorEME::requestMediaKeySystemAccess):
(WebCore::tryNextSupportedConfiguration):
* Source/WebCore/Modules/encryptedmedia/legacy/WebKitMediaKeySession.cpp:
(WebCore::WebKitMediaKeySession::generateKeyRequest):
* Source/WebCore/Modules/encryptedmedia/legacy/WebKitMediaKeySession.h:
* Source/WebCore/Modules/encryptedmedia/legacy/WebKitMediaKeys.cpp:
(WebCore::WebKitMediaKeys::createSession):
* Source/WebCore/platform/graphics/LegacyCDMSession.h:
* Source/WebCore/platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.mm:
(WebCore::CDMInstanceSessionFairPlayStreamingAVFObjC::didProvideRequest):
(WebCore::CDMInstanceSessionFairPlayStreamingAVFObjC::didProvideRequests):
(WebCore::CDMInstanceSessionFairPlayStreamingAVFObjC::optionsForKeyRequestWithHashSalt):
(WebCore::CDMInstanceSessionFairPlayStreamingAVFObjC::didProvideRenewingRequest):
* Source/WebCore/platform/graphics/avfou

--- a/Source/WebKit/GPUProcess/media/RemoteLegacyCDMSessionProxy.messages.in
+++ b/Source/WebKit/GPUProcess/media/RemoteLegacyCDMSessionProxy.messages.in
@@ -29,7 +29,7 @@
     EnabledBy=LegacyEncryptedMediaAPIEnabled
 ]
 messages -> RemoteLegacyCDMSessionProxy {
-    GenerateKeyRequest(String mimeType, RefPtr<WebCore::SharedBuffer> initData) -> (RefPtr<WebCore::SharedBuffer> nextMessage, String destinationURL, unsigned short errorCode, uint32_t systemCode) Synchronous
+    GenerateKeyRequest(String mimeType, RefPtr<WebCore::SharedBuffer> initData, String mediaKeysHashSalt) -> (RefPtr<WebCore::SharedBuffer> nextMessage, String destinationURL, unsigned short errorCode, uint32_t systemCode) Synchronous
     ReleaseKeys()
     Update(RefPtr<WebCore::SharedBuffer> update) -> (bool succeeded, RefPtr<WebCore::SharedBuffer> nextMessage, unsigned short errorCode, uint32_t systemCode) Synchronous
     CachedKeyForKeyID(String keyId) -> (RefPtr<WebCore::SharedBuffer> key) Synchronous
