The WebContent process does not respond to notifications without entitlement https://bugs.webkit.org/show_bug.cgi?id=290065 rdar://146044717
Reviewed by Sihui Liu.

Without the entitlement com.apple.developer.web-browser-engine.restrict.notifyd, notifications will not be
forwarded to the WebContent process. Since the sandbox blocks notifyd unconditionally, the WebContent
process will not respond to notifications. Address this by conditionalizing the sandbox rule on the
presence of the entitlement.

* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in:

Canonical link: https://commits.webkit.org/292397@main

--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb.in
@@ -490,7 +490,8 @@
             (allow mach-message-send (notifyd-message-numbers)))))
 
 #if ENABLE(NOTIFY_BLOCKING)
-(deny mach-lookup (global-name "com.apple.system.notification_center"))
+(with-filter (require-not (notify-blocking))
+    (allow-notifyd))
 #else
 (allow-notifyd)
 #endif
