Move WebKitTestRunner's console.log output to UI process https://bugs.webkit.org/show_bug.cgi?id=290052 rdar://147418844
Reviewed by Charlie Wolfe.

In order for the messages to be ordered correctly with other synchronous messages with test output,
I need to use IPC::SendOption::DispatchMessageEvenWhenWaitingForSyncReply.  In order to prevent
performance issues, I only do this when WKPageConfigurationSetShouldSendConsoleLogsToUIProcessForTesting
has been used.  Applications can already use WKUserScript and WKScriptMessageHandler to get console.log
output asynchronously.

A few tests occasionally output things after the test is finished, which used to be checked by
InjectedBundle::isTestRunning.  Now I check TestInvocation::gotFinalMessage, but that's still a
little racy because right now the source of truth is the web content process.  To reduce flakyness,
I also add dumpJSConsoleLogInStdErr=true to some tests where it is helpful in reducing flakyness.

* Source/WebKit/Shared/WebPageCreationParameters.h:
* Source/WebKit/Shared/WebPageCreationParameters.serialization.in:
* Source/WebKit/UIProcess/API/APIPageConfiguration.h:
(API::PageConfiguration::shouldSendConsoleLogsToUIProcessForTesting const):
(API::PageConfiguration::setShouldSendConsoleLogsToUIProcessForTesting):
* Source/WebKit/UIProcess/API/APIUIClient.h:
(API::UIClient::addMessageToConsoleForTesting):
* Source/WebKit/UIProcess/API/C/WKPage.cpp:
(WKPageSetPageUIClient):
* Source/WebKit/UIProcess/API/C/WKPageConfigurationRef.cpp:
(WKPageConfigurationSetShouldSendConsoleLogsToUIProcessForTesting):
* Source/WebKit/UIProcess/API/C/WKPageConfigurationRef.h:
* Source/WebKit/UIProcess/API/C/WKPageUIClient.h:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::creationParameters):
(WebKit::WebPageProxy::addMessageToConsoleForTesting):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::Web

--- a/Source/WebKit/Shared/WebPageCreationParameters.serialization.in
+++ b/Source/WebKit/Shared/WebPageCreationParameters.serialization.in
@@ -276,6 +276,7 @@ enum class WebCore::UserInterfaceLayoutDirection : bool;
 #endif
 
     bool hasReceivedAXRequestInUIProcess;
+    bool shouldSendConsoleLogsToUIProcessForTesting;
 }
 
 [Nested] struct WebKit::RemotePageParameters {
