Encode AffineTransform from contiguous array https://bugs.webkit.org/show_bug.cgi?id=289951 rdar://147305275
Reviewed by Simon Fraser.

Commands with AffineTransform appear in traces. Try to speed them up
by encoding the values as one 6 element array, not 6 individual
elements.

* Source/WebCore/platform/graphics/transforms/AffineTransform.h:
(WebCore::AffineTransform::AffineTransform):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/292405@main

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -486,12 +486,7 @@ struct WebCore::CharacterRange {
 }
 
 [AdditionalEncoder=StreamConnectionEncoder] class WebCore::AffineTransform {
-    double a()
-    double b()
-    double c()
-    double d()
-    double e()
-    double f()
+    std::span<const double, 6> span();
 }
 
 [AdditionalEncoder=StreamConnectionEncoder] class WebCore::FloatPoint {
